--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 li, a{
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 10px;
+    font-size: 16px;
     color: white;
     text-decoration:none;
 }
@@ -25,25 +25,39 @@ header{
 
 .gith button{
     font-family: 'Lato', sans-serif;
-    font-size: 10px;
+    font-size: 16px;
     padding: 9px, 25px;
-    background-color: white;
+    text-align: center;
+    text-decoration: none;
+    background-color: #0088a9;
     border: none;
     border-radius: 50px;
+    width: 80px;
+    height: 40px;
     cursor: pointer;
-    transition: all 0.2s ease 0s;
+    transition: all 0.4s ease 0s;
+    color: white;
+    margin-left: 10px;
 }
 .gith button:hover{
-    background-color: gray;
+    background-color: #035264;
+   
 
 }
 .logo{
     font-family: 'Lato', sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 25px;
     color: white;
     cursor: progress;/* Mudar dps */
     margin-right: auto;
+    
+    
+    
+}
+.logo:hover{
+    
+
 }
 
 .navlinks{
@@ -52,13 +66,22 @@ header{
 
 .navlinks li{
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0px 10px;
 }
 
 .navlinks li a{
-    transition: all 0.2s ease 0s;
+    transition: all 0.4s ease 0s;
+    
 }
 
 .navlinks li a:hover{
     color: #0088a9;
+    
+    
+}
+
+.tags{
+    font-family: 'Lato', sans-serif;
+    font-size: large;
+    color: #0088a9 ;
 }
